language_tests/source_files/invalid/use_after_move_generic.tr
func consume[T](_ x: T) {}

func doubleUse[T](_ x: T) {
    consume(x)
    consume(x)
}
